Synchronisation of categories from server to client is now possible
Fixed a bug in the resizer where it was possible for the lower line to go to far, under the picture
Fixed a bug when going through the tree and find a node. Before, the parent node itself was never checked for the given criteria
Using recursion, it now is possible for each category to have infinite subcategories and albums
Crop and resize code are now made more simple
Rotation improved
Fixed bug found by Aditya: The black transparent background on image while cropping is back and constantly flickers on both Windows and Linux.
Fixed bug found by Aditya: The bottom and left selectors on red box in resize editor doesn't work. Remove them if they are no of any use or add functionality for it.
Fixed bug found by Aditya: Just noticed that ctime attribute in pictures tag in gallery.xml has negative value. I guess you should cast it to long int instead of normal integer. Also filesize should be casted to long int as this value can also go out of range.
Improved the user of the gridbag layout in the picturelist where before there where some refreshing problems showing a lot of parts of pictures
Fixed bug found by Aditya: When I execute the jar file for the very first time, is it supposed to create the albums/userpics/ folder on its own? If yes, then it is not creating it
Fixed bug when deleting an album directly made in the gallery where there was a wrong typecasting of the parent node
Disabled to thread which repaints the black area in the crop editor. This keeps giving problems on Windows and Linux and there's is just no other way to draw this black area
Fixed a bug where selecting a picture in the picture list did not properly triggered a selection
The 'contrain proportions' has been temporary disabled
Resize handlers are made bigger and are better responsing the mouse movements
Added 'constrain proportions' option in the resizer. There are still some problems with the handler